<resources>
    <string name="app_name">AnschaDO</string>
    <string name="action_settings">Settings</string>
    <string name="informe_o_nome_de_sua_tarefa">Informe o nome de sua tarefa!</string>
    <string name="oque_voc_pretende_fazer">Oque você pretende fazer?</string>
    <string name="data_da_atividade">Data de realização da tarefa</string>
    <string name="qual_a_periodicidade_de_sua_tarefa">Qual a periodicidade de sua tarefa?</string>
    <string name="qual_a_criticidade_da_atividade">Qual a criticidade da tarefa?</string>
    <string name="hora_da_atividade">Hora de realização da tarefa</string>
    <string name="cadastro_name">Cadastro de Tarefa</string>
    <string name="sobre">Sobre</string>
</resources>
