<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maykon.exemplos.Activitys.DadosTarefa">

    <TextView
        android:id="@+id/text_TituloTarefa1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/oque_voc_pretende_fazer"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/text_TituloTarefa2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="16sp"
        android:layout_below="@+id/text_TituloTarefa1"/>

    <TextView
        android:id="@+id/text_DataTarefa1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="18dp"
        android:text="@string/data_da_atividade"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/text_TituloTarefa2"/>

    <TextView
        android:id="@+id/text_DataTarefa2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_DataTarefa1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="16sp"
        android:inputType="none" />

    <TextView
        android:id="@+id/text_HoraTarefa1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="18dp"
        android:text="@string/hora_da_atividade"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/text_DataTarefa2"/>

    <TextView
        android:id="@+id/text_HoraTarefa2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_HoraTarefa1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_Periodicidade1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/text_HoraTarefa2"
        android:text="@string/qual_a_periodicidade_de_sua_tarefa"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_Periodicidade2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@+id/text_Periodicidade1"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_Criticidade1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/text_Periodicidade2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/qual_a_criticidade_da_atividade"/>

    <TextView
        android:id="@+id/text_Criticidade2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="16sp"
        android:layout_below="@+id/text_Criticidade1"/>

</RelativeLayout>
